--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "Ceess Vision Trainer",
   "name": "Create React App Sample",
   "start_url": ".",
   "display": "standalone",
